--- a/_forms/resource_link_form.html
+++ b/_forms/resource_link_form.html
@@ -17,7 +17,7 @@ destination_layout: default
     <hr/>
     <center><h5>Enter external Authors</h5></center>
     <div><input type="text" id="fn" placeholder="First Name" style="width:45%">&nbsp;<input type="text" id="ln" placeholder="Last Name" style="width:45%"></div>
-    <div><input type="text" id="pu" placeholder="Enter website URL (if any)" style="width:90%"></div>
+    <div><input type="text" id="pu" placeholder="Enter website URL (if any)" style="width:90%" onchange="checkURL('pu')"></div>
     <input type="button" onclick="add_new2();" value="Add Person"> &nbsp; OR  &nbsp;
     <input type="button" onclick="window.open('/people_form.html')" value="Add to Organization"><br />
     <ul id="new_author_added" style="font-weight: normal; text-align: left; padding: 10px;"><LH><b>Added external Authors:</b></LH></ul>
@@ -31,7 +31,7 @@ destination_layout: default
         <hr/>
         <center><h5>Enter external people related to this Resource</h5></center>
         <div><input type="text" id="first_name" placeholder="First Name" style="width:45%">&nbsp;<input type="text" id="last_name" placeholder="Last Name" style="width:45%"></div>
-        <div><input type="text" id="person_url" placeholder="Enter website URL (if any)" style="width:90%"></div>
+        <div><input type="text" id="person_url" placeholder="Enter website URL (if any)" style="width:90%" onchange="checkURL('person_url')"></div>
         <input type="button" onclick="add_new();" value="Add Person"> &nbsp; OR  &nbsp;
         <input type="button" onclick="window.open('/people_form.html')" value="Add to Organization"><br />
         <ul id="new_people_added" style="font-weight: normal; text-align: left; padding: 10px;"><LH><b>Added external People:</b></LH></ul>
@@ -258,6 +258,16 @@ else{
 alert("Please enter a firstname and / or lastname")
 }
 }
+
+    function checkURL(ids){
+        let url = document.getElementById(ids).value;
+        if (url.indexOf('://') > 0 || url.indexOf('//') === 0 ) {
+            // URL is absolute
+        } else {
+            alert("Please enter a valid absolute URL");
+            document.getElementById(ids).value = "";
+        }
+    }
 
     function add_tag(){
         s2 = String(document.getElementById('topic').value)
