Added new function to Documentation

--- a/create_form.html
+++ b/create_form.html
@@ -377,7 +377,7 @@ layout: default
 
                   <li>
                     <h4>Checking if the URL is absolute or relative</h4>
-                    <!-- Source: https://stackoverflow.com/questions/10687099/how-to-test-if-a-url-string-is-absolute-or-relative -->
+                    <!-- Code Source: https://stackoverflow.com/questions/10687099/how-to-test-if-a-url-string-is-absolute-or-relative -->
                   <code>
   function checkURL(ids){
     let url = document.getElementById(ids).value;
