--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -292,7 +292,7 @@ destination_layout: funds
       sessionStorage.setItem(file, page1X);
     });
     var s = String(sessionStorage.getItem(file))
-    if(s == "null"){
+    if(s == "null" && checkReload()){
       window.location.reload();
     }
     (document.getElementById("loading")).style.display = "none";
