--- a/_forms/project_form.html
+++ b/_forms/project_form.html
@@ -199,7 +199,7 @@ function getdata(file){
       sessionStorage.setItem(file, page1X);
     });
     var s = String(sessionStorage.getItem(file))
-    if(s == "null"){
+    if(s == "null" && checkReload()){
       window.location.reload();
     }
     (document.getElementById("loading")).style.display = "none";;
