--- a/_forms/blogpost_form.html
+++ b/_forms/blogpost_form.html
@@ -276,18 +276,25 @@ function add_new2(){
     }
 
   function getdata(file){
-    $.get(file, function(result){
-      var obj = $(result).find('script');
-      var page1X = $(result).find('div.myData').data('x');
-      sessionStorage.setItem(file, page1X);
+    $.ajax({
+      url: file, 
+      cache: false,
+      timeout: 100000,
+      error: function(){
+        (document.getElementById("loading")).style.display = "none";
+        (document.getElementById("after_submission")).style.display = "block";
+        document.getElementById("after_submission").innerHTML = "<center>We are sorry! Cannot load form data. Please try using other browser or <a href = '../#help'>contact Support</a></center>"
+      },
+      success: function(response) {
+        var parsed = $.parseHTML(response);
+        var page1X = $(parsed).find('div.myData').data('x');
+        return(page1X);
+      },
+      complete: function(){
+        (document.getElementById("loading")).style.display = "none";;
+        (document.getElementById("after_submission")).style.display = "block";
+      }
     });
-    var s = String(sessionStorage.getItem(file))
-    if(s == "null" && checkReload()){
-      window.location.reload();
-    }
-    (document.getElementById("loading")).style.display = "none";;
-    (document.getElementById("after_submission")).style.display = "block";
-    return(s);
   }
 
   let title_string = getdata("/blog.html");
