Fixed reloading issue

--- a/_forms/blogpost_form.html
+++ b/_forms/blogpost_form.html
@@ -296,7 +296,7 @@ function add_new2(){
         (document.getElementById("after_submission")).style.display = "block";
       }
     });
-    return(page1X);
+    return(String(page1X));
   }
 
   let title_string = getdata("/blog.html");
