--- a/_forms/blogpost_form.html
+++ b/_forms/blogpost_form.html
@@ -288,13 +288,11 @@ function add_new2(){
       success: function(response) {
         var parsed = $.parseHTML(response);
         var page1X = $(parsed).find('div.myData').data('x');
+        (document.getElementById("loading")).style.display = "none";;
+        (document.getElementById("after_submission")).style.display = "block";
         return page1X;
       },
       timeout: 5000,
-      // complete: function(){
-      //   (document.getElementById("loading")).style.display = "none";;
-      //   (document.getElementById("after_submission")).style.display = "block";
-      // }
     });
   }
 
