Fixed reloading issue

--- a/_forms/blogpost_form.html
+++ b/_forms/blogpost_form.html
@@ -277,7 +277,6 @@ function add_new2(){
 
   function getdata(file){
     var page1X = "";
-    var isComplete = false;
     $.ajax({
       url: file, 
       cache: false,
@@ -292,16 +291,18 @@ function add_new2(){
         page1X = $(parsed).find('div.myData').data('x');
         (document.getElementById("loading")).style.display = "none";;
         (document.getElementById("after_submission")).style.display = "block";
-        console.log(page1X);
       },
       timeout: 10000,
       complete: function(){
-        page1X = true;
+        if(page1X == undefined){
+          console.log("Failed page: "+file);
+        }
+        else{
+          console.log("Passed Page: "+file);
+        }
+        return page1X;
       }
     });
-    if(page1X){
-      return page1X;
-    }
   }
 
   let title_string = getdata("/blog.html");
