Fixed reloading issue

--- a/_forms/blogpost_form.html
+++ b/_forms/blogpost_form.html
@@ -276,7 +276,6 @@ function add_new2(){
     }
 
   function getdata(file){
-    var page1X = "";
     $.ajax({
       url: file, 
       cache: false,
@@ -288,17 +287,19 @@ function add_new2(){
       },
       success: function(response) {
         var parsed = $.parseHTML(response);
-        page1X = $(parsed).find('div.myData').data('x');
+        var page1X = $(parsed).find('div.myData').data('x');
         (document.getElementById("loading")).style.display = "none";;
         (document.getElementById("after_submission")).style.display = "block";
+        sessionStorage.setItem(file, page1X);
       },
       timeout: 10000,
       complete: function(){
         //Passed
       }
     });
-    console.log(String(page1X));
-    return String(page1X);
+    var s = String(sessionStorage.getItem(file))
+    console.log(s);
+    return s;
   }
 
   let title_string = getdata("/blog.html");
