--- a/_forms/talks_form.html
+++ b/_forms/talks_form.html
@@ -23,13 +23,13 @@ destination_layout: talk
 
       <div>
       <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;"><center><h5>Choose Speaker</h5></center><div id="orator"></div><hr/>
-      <center><h5>Enter external Speaker</h5></center>
-      <div><input type="text" id="first_name" placeholder="Enter a new Speaker" style="width:45%">&nbsp;<input type="text" id="last_name" placeholder="Last Name" style="width:45%"></div>
+      <center><h5>Enter External Speaker</h5></center>
+      <div><input type="text" id="first_name" placeholder="First Name" style="width:45%">&nbsp;<input type="text" id="last_name" placeholder="Last Name" style="width:45%"></div>
       <div><input type="text" id="person_url" placeholder="Enter website URL (if any)" style="width:90%"  onchange="checkURL('person_url')"></div>
       <input type="button" onclick="add_new_orator();" value="Add Speaker" style="width:10%"> &nbsp; OR  &nbsp;
       <input type="button" onclick="window.open('_forms/people_form.html')" value="Add to Organization"><br />
       <div style="font-weight: normal; text-align: left; padding: 10px;">
-        <b>Added non-organization Speaker:</b>
+        <b>Added non-organization speaker:</b>
         <label id="new_orator_added" style="font-weight: normal;"></label>
       </div>
       </div></div>
