--- a/_forms/testingPublish.html
+++ b/_forms/testingPublish.html
@@ -215,6 +215,7 @@ destination_layout: publication
         arr.push(value);
       }
       eval(lis) = arr
+      console.log(eval(lis))
     }
   
     function tagger(t, inside, samp_func){
