--- a/_forms/publication_form.html
+++ b/_forms/publication_form.html
@@ -34,7 +34,7 @@ destination_layout: publication
         <input type="button" onclick="window.open('/people_form.html')" value="Add to Organization"><br />
         <ul id="new_author_added" style="font-weight: normal; text-align: left; padding: 10px;"><LH><b>Added external Authors:</b></LH></ul>
         <small style="text-align:left"><font color="red">*</font>&nbsp;Click on the names that appear below "Added external People" to remove them from the list.</small><br/>
-        <small style="text-align:left">If the tags doesn't show up, try refreshing the page. If the problem still persist, please contact <a href="mailto:prakshal@buffalo.edu">here</a>.</small>
+        <small style="text-align:left">Authors will be categorized as internal or external on the public-facing website.</small>
         </div></div>
   
         <div>
