--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -103,8 +103,8 @@ destination_layout: funds
       let saveFile = () => {
           
           // Get the data from each element on the form.
-          const title = document.getElementById('title').value;
-          const org_name = document.getElementById('org_name').value;
+          const title = specialToASCII(document.getElementById('title').value);
+          const org_name = specialToASCII(document.getElementById('org_name').value);
           const org_link = document.getElementById('org_link').value;
           const grants = document.getElementById('grants').value;
           const grant_notice = document.getElementById('grant_notice').value;
@@ -126,7 +126,7 @@ destination_layout: funds
 
           const tagged = res_topics.toString();
           const tagged_people = people.toString();
-          const msg = document.getElementById('descrip').value;
+          const msg = specialToASCII(document.getElementById('descrip').value);
           // This variable stores all the data.
           let data = 
               "---"+"\n"+
