--- a/_forms/talks_form.html
+++ b/_forms/talks_form.html
@@ -25,7 +25,7 @@ destination_layout: talk
       <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;"><center><h5>Choose Speaker</h5></center><div id="orator"></div><hr/>
       <center><h5>Enter External Speaker</h5></center>
       <div><input type="text" id="first_name" placeholder="First Name" style="width:45%">&nbsp;<input type="text" id="last_name" placeholder="Last Name" style="width:45%"></div>
-      <div><input type="text" id="person_url" placeholder="Enter website URL (if any)" style="width:90%"  onchange="checkURL('person_url')"></div>
+      <div><input type="text" id="person_url" placeholder="Enter website URL (if any)" style="width:90%" onchange="checkURL('person_url')"></div>
       <input type="button" onclick="add_new_orator();" value="Add Speaker" style="width:10%"> &nbsp; OR  &nbsp;
       <input type="button" onclick="window.open('_forms/people_form.html')" value="Add to Organization"><br />
       <div style="font-weight: normal; text-align: left; padding: 10px;">
@@ -55,7 +55,7 @@ destination_layout: talk
       </div>
       <hr/>
       <center><h6>Enter External Resources</h6></center>
-      <input type="text" id="links" placeholder="Enter links" style="width: 70%;"/>&nbsp;<input type="button" value="Add another link" onclick="save_link()">
+      <input type="text" id="links" placeholder="Enter links" style="width: 70%;" onchange="checkURL('person_url')"/>&nbsp;<input type="button" value="Add another link" onclick="save_link()">
       <br /><br /><ul id="link_status" style="text-align: left; padding:15px;"><LH><b>Added Links:</b></LH></ul><font color="red">*</font>Click on a link to remove it.<br>
       <small style="text-align:left">To upload any files, visit <a href="https://github.com/CS4SG/CS4SG.github.io/tree/master/_resources" target="_blank">Resources</a><br>
         To upload any resource link, visit <a href="https://github.com/CS4SG/CS4SG.github.io/tree/master/_resource_links" target="_blank">Resource Links</a>
@@ -108,7 +108,8 @@ destination_layout: talk
           "title: "+topic+"\n"+
           "category: "+category+"\n"+
           "locus: "+locus+"\n"+
-          "resource_links: "+((resources.concat(resources_slides).concat(links)).toString(","))+"\n"+
+          "resource_links: "+links.toString(",")+"\n"+
+          "abs_links: "+(resources.concat(resources_slides)).toString(",")+"\n"+
           "talk_by: "+t+"\n"+
           "date: "+dates+"\n"+
           "tagged_projects: "+res_topics.toString()+"\n"+
