--- a/_forms/code_form.html
+++ b/_forms/code_form.html
@@ -42,7 +42,7 @@ destination_layout: default
     <div>
     <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
     <center><h5>Enter External Code Links</h5></center>
-    <input type="text" id="links" placeholder="Enter external code links" style="width: 70%;"/>&nbsp;<input type="button" value="Add another link" onclick="save_link()">
+    <input type="text" id="links" placeholder="Enter external code links" style="width: 70%;" onchange="checkURL('links')"/>&nbsp;<input type="button" value="Add another link" onclick="save_link()">
     <br /><br /><ul id="link_status" style="text-align: left; padding:10px;"><LH><b>Added Links:</b></LH></ul><font color="red">*</font>Click on a link to remove it.</div></div>
     
     <div>
