--- a/_forms/publication_form.html
+++ b/_forms/publication_form.html
@@ -446,7 +446,7 @@ alert("Please enter a firstname and / or lastname")
               }
             }
           }
-          if (confirm("You have some data remaining in the BibTeX file which was not imported. Please click OK to import data. Cancel to discard")){
+          if (confirm("All the extra fields will be added to the textbox at the bottom. Please click OK to continue. Cancel to discard the extra fields imported.")){
             document.getElementById('descrip').value = importables
           }
           else{
