--- a/_forms/publication_form.html
+++ b/_forms/publication_form.html
@@ -57,15 +57,15 @@ destination_layout: publication
           <center><h5>Choose related Resources</h5></center>
           <div class="table">
             <div class="cell">
-              <button type="button" class="collapsible_slides">Slides & Papers <i class='bx bxs-chevron-down' ></i></button>
-              <div class="content_slides">
+              <button class="collapsible">Slides and Papers</button>
+              <div class="content">
                 <div id="slide_res" class="hiddenCB"></div>
               </div>
             </div>
           
           <div class="cell">
-            <button type="button" class="collapsible_links">Links <i class='bx bxs-chevron-down' ></i></button>
-            <div class="content_links">
+            <button class="collapsible">Links</button>
+            <div class="content">
               <div id="resource" class="hiddenCB"></div>
             </div>
           </div>
