Added selection for resources

--- a/_forms/talks_form.html
+++ b/_forms/talks_form.html
@@ -45,13 +45,20 @@ destination_layout: talk
 
     <div><div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
       <center><h5>Choose related Resources</h5></center>
-      <button type="button" class="collapsible_slides">Slides & Papers <i class='bx bxs-chevron-down' ></i></button>
-      <div class="content_slides">
-        <div id="slide_res" class="hiddenCB"></div>
-      </div>
-      <button type="button" class="collapsible_links">Links <i class='bx bxs-chevron-down' ></i></button>
-      <div class="content_links">
-        <div id="resource" class="hiddenCB"></div>
+      <div class="table">
+        <div class="cell">
+          <button type="button" class="collapsible_slides">Slides & Papers <i class='bx bxs-chevron-down' ></i></button>
+          <div class="content_slides">
+            <div id="slide_res" class="hiddenCB"></div>
+          </div>
+        </div>
+      
+        <div class="cell">
+          <button type="button" class="collapsible_links">Links <i class='bx bxs-chevron-down' ></i></button>
+          <div class="content_links">
+            <div id="resource" class="hiddenCB"></div>
+          </div>
+        </div>
       </div>
       <hr/>
       <center><h6>Enter External Resources</h6></center>
