--- a/_forms/people_form.html
+++ b/_forms/people_form.html
@@ -147,7 +147,8 @@ destination_layout: people
         newLink.click(); 
     }
     function after_submission(){
-      document.getElementById("after_submission").innerHTML = "<br><br><center><table width='80%'><h2>Thank you for joining CS4SG.</h2><br><br> To add your information to the CS4SG website, just upload the file to the destination link below.<br><a href = '{{ page.upload }}' target='_blank'>{{ page.upload }}</a></table></center>"
+      dest = "{{ page.title }}".split(" ").slice(0, -1).join(" ").toLowerCase();
+      document.getElementById("after_submission").innerHTML = "<br><br><center><table width='80%'><h2>Thank you for submitting your "+dest+".</h2><br><br> To add it to the C4SG "+dest+" section, just upload the file to the designated folder. Here is the link for the folder <br><a href = '{{ page.upload }}' target='_blank'>{{ page.upload }}</a></table></center>"
     }
     function upload_link(){
       document.getElementById("image_area").innerHTML = '<input type="text" id="img_link" placeholder="Enter image Link" class="team_picture"/>'
