--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -164,7 +164,8 @@ destination_layout: funds
       }
   
       function after_submission(){
-        document.getElementById("after_submission").innerHTML = "<br><br><center><table width='80%'><h2>Thank you for submitting the funding organization's details.</h2><br><br> To add it to the CS4SG Website, just upload the file to the destination folder. Here is the link for the folder <br><a href = '{{ page.upload }}' target='_blank'>{{ page.upload }}</a></table></center>"
+        dest = "{{ page.title }}".split(" ").slice(0, -1).join(" ").toLowerCase();
+        document.getElementById("after_submission").innerHTML = "<br><br><center><table width='80%'><h2>Thank you for submitting your "+dest+".</h2><br><br> To add it to the C4SG "+dest+" section, just upload the file to the designated folder. Here is the link for the folder <br><a href = '{{ page.upload }}' target='_blank'>{{ page.upload }}</a></table></center>"
       }
   
       function tagger(t, inside, samp_func){
