--- a/_forms/project_form.html
+++ b/_forms/project_form.html
@@ -100,6 +100,11 @@ else {
 newLink.click(); 
 }
 
+function after_submission(){
+  dest = "{{ page.title }}".split(" ").slice(0, -1).join(" ").toLowerCase();
+  document.getElementById("after_submission").innerHTML = "<br><br><center><table width='80%'><h2>Thank you for submitting your "+dest+".</h2><br><br> To add it to the C4SG "+dest+" section, just upload the file to the designated folder. Here is the link for the folder <br><a href = '{{ page.upload }}' target='_blank'>{{ page.upload }}</a></table></center>"
+}
+
 function create(){
   document.getElementById("method").innerHTML = ''
 }
