--- a/_forms/project_form.html
+++ b/_forms/project_form.html
@@ -101,7 +101,7 @@ newLink.click();
 }
 
 function after_submission(){
-  document.getElementById("after_submission").innerHTML = "<br><br><center><table width='80%'><h2>Thank you for submitting your project.</h2><br><br> To add it to the C4SG project Section, just upload the file to the designated folder. Here is the link for the folder <br><a href = '{{ upload }}' target='_blank'>{{ upload }}</a></table></center>"
+  document.getElementById("after_submission").innerHTML = "<br><br><center><table width='80%'><h2>Thank you for submitting your project.</h2><br><br> To add it to the C4SG project Section, just upload the file to the designated folder. Here is the link for the folder <br><a href = '{{ page.upload }}' target='_blank'>{{ page.upload }}</a></table></center>"
 }
 
 function create(){
