--- a/_forms/teaching_resources.html
+++ b/_forms/teaching_resources.html
@@ -109,7 +109,7 @@ destination_layout: teaching_resource
           <li>Finally, upload the folder to the appropriate directory on the server at: <br><a href = '{{ page.upload }}' target='_blank'>{{ page.upload }}</a></li>\
         </ol>\
         Here is an example of a directory structure: <br/>\
-        <center><a href='../assets/images/Dir Structure.png'target='_blank'><img src='../assets/images/Dir Structure.png' alt='Steps after submitting the form' class='help_img'></a></center>\
+        <center><a href='../assets/images/Dir Structure.png'target='_blank'><img src='../assets/images/Dir Structure.png' alt='Steps after submitting the form' class='help_img' style='width: 40vw;'></a></center>\
         </table></center>"
     }
       
