--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ layout: default
           <li>
             <h3>You are all set!</h3>
             <p>Congrats! Your changes has been published on the C4SG website.</p>
-            <p><b><font color="red">*</font>&nbsp;Please note that the files uploaded to GitHub sometimes might take around 2-5 minutes to show up.</b></p>
+            <p><b><font color="red">*</font>&nbsp;Please note that the files uploaded sometimes might take around 2-5 minutes to show up.</b></p>
           </li>
         </ul>
       </p>
